tests/compile_fail/message_trait/engine/ponder_hit.rs
fn a(_: impl ruci::engine::traits::Message) {}
fn b(m: ruci::PonderHit) {
    a(m);
}

fn main() {}